--- a/headerstyle.css
+++ b/headerstyle.css
@@ -4,7 +4,7 @@
 }
 
 .main-header {
-    background-image: url('/Images/flooringthree.jpeg');
+    background-image: url('Images/flooringthree.jpeg');
     background-size: cover;
     background-position: center;
     position: abso;
