--- a/reviewstyle.css
+++ b/reviewstyle.css
@@ -21,7 +21,7 @@
 .reviews-section {
   margin-top: 50px;
   text-align: center;
-  background-image: url('/Images/yardfour.jpeg');
+  background-image: url('Images/yardfour.jpeg');
   background-size: cover; 
   background-position: center;
 }
